--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="hammer.min.js"></script>
     <title>conditionalclobber</title>
   </head>
-  <body>
+  <body style="background-color: #424242;">
     <noscript>
       <strong>We're sorry but conditionalclobber doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
